--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@types/jquery": "^3.2.12",
+    "aws-sdk": "^2.417.0",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.0",
@@ -40,8 +41,11 @@
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.13",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-toastr": "^4.1.2",
+    "ngx-image-cropper": "^1.3.8",
     "ngx-pipes": "^2.3.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
